--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,4 @@ jobs:
           pip install requests snowflake-connector-python pandas
 
       - name: Run recommender script
-        run: python your_script_name.py
+        run: python main.py
