--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests snowflake-connector-python pandas json
+          pip install requests snowflake-connector-python pandas
 
       - name: Run recommender script
         run: python main.py
