--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,10 @@ jobs:
 
     env:
       GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
-      GOOGLE_SHEET_ID: ${{ secrets.GOOGLE_SHEET_ID_RS}}
+      GOOGLE_SHEET_ID_HX: ${{ secrets.GOOGLE_SHEET_ID_RS }}
       POST_ENDPOINT: ${{ secrets.POST_ENDPOINT }}
-      WEBHOOK_URL: ${{ secrets.WEBHOOK_URL_REACTIVATION_SQUAD}}
-      SNOWFLAKE_USER: ${{ secrets.SNOWFLAKE_USER }}
+      WEBHOOK_URL_HX: ${{ secrets.WEBHOOK_URL_HX }}
+      SNOWFLAKE_USER: ${{ secrets.WEBHOOK_URL_REACTIVATION_SQUAD }}
       SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
       SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
 
