--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
       GOOGLE_SHEET_ID_RS: ${{ secrets.GOOGLE_SHEET_ID_RS }}
       POST_ENDPOINT: ${{ secrets.POST_ENDPOINT }}
-      WEBHOOK_URL: ${{ secrets.WEBHOOK_URL_REACTIVATION_SQUAD }}
+      WEBHOOK_URL_REACTIVATION_SQUAD: ${{ secrets.WEBHOOK_URL_REACTIVATION_SQUAD }}
       SNOWFLAKE_USER: ${{ secrets.SNOWFLAKE_USER }}
       SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
       SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
